[qwen-3.7-max] p6 测试结果 - 2026-06-14 22:21:09